--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "build-extension": "vite build && node scripts/build-extension.js"
   },
   "dependencies": {
+    "pinia": "^2.1.0",
     "vue": "^3.3.4",
-    "pinia": "^2.1.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "archiver": "^5.3.1",
     "vite": "^4.4.5",
     "vite-plugin-static-copy": "^0.17.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
