--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build-extension": "vite build && node scripts/build-extension.js"
+    "build-extension": "vite build"
   },
   "dependencies": {
     "pinia": "^2.1.0",
+    "sharp": "^0.34.1",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "archiver": "^5.3.1",
-    "vite": "^4.4.5",
-    "vite-plugin-static-copy": "^0.17.0"
+    "vite": "^4.4.5"
   },
   "browserslist": [
     "> 1%",
