--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "onetabs",
   "version": "0.0.4",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,14 +10,22 @@
     "build-extension": "vite build"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.3",
+    "@primevue/themes": "^4.3.3",
+    "@tailwindcss/vite": "^4.1.5",
     "pinia": "^2.1.0",
+    "primevue": "^4.3.3",
     "sharp": "^0.34.1",
+    "tailwindcss": "^4.1.5",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "archiver": "^5.3.1",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^4.4.5"
   },
   "browserslist": [
