--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "build-extension": "vite build"
@@ -22,11 +22,20 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@eslint/css": "^0.7.0",
+    "@eslint/js": "^9.25.1",
     "@primevue/auto-import-resolver": "^4.3.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "archiver": "^5.3.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-vue": "^10.1.0",
+    "globals": "^16.0.0",
+    "prettier": "3.5.3",
+    "prettier-eslint": "^16.4.1",
     "unplugin-vue-components": "^28.5.0",
-    "vite": "^4.4.5"
+    "vite": "^6.3.4"
   },
   "browserslist": [
     "> 1%",
