--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.3",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^5.0.0",
     "archiver": "^5.3.1",
+    "sass-embedded": "^1.93.2",
     "unplugin-vue-components": "^28.5.0",
-    "vite": "^4.4.5"
+    "vite": "^5.2.0"
   },
   "browserslist": [
     "> 1%",
