--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@primevue/themes": "^4.3.3",
     "@tailwindcss/vite": "^4.1.5",
     "pinia": "^2.1.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "sharp": "^0.34.1",
     "tailwindcss": "^4.1.5",
