feat 拆分优先级文档&需求开发

--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -11,7 +11,7 @@
     },
     "default_title": "OneTabs"
   },
-  "permissions": ["tabs", "storage", "tabGroups", "activeTab"],
+  "permissions": ["tabs", "storage", "tabGroups", "activeTab", "bookmarks"],
   "background": {
     "service_worker": "background.js"
   },
